# voicings

./: .gitignore  README.md  benchmark.md  pyproject.toml
data/: .gitignore
voicings/: chord_tournament.py  cmaj7.py  cmaj7_mp.py  cyclic_agg_tournament.py  finalize.py  step3_pretty_print.py  step4_analysis.py  step5_encipher.py  step6_groupby.py
voicings/core/: chords.py  classify.py  decipher.py  encipher.py  feasible.py  pl_tqdm.py  untar.py
voicings/mains/: README.md  melody.py
