[project]
name = "voicings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "polars>=1.32.2",
    "polars-u64-idx>=1.32.2",
    "seaborn>=0.13.2",
    "symusic>=0.5.8",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
include = ["voicings*"]
exclude = ["data*"]

[dependency-groups]
dev = [
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
]
